--- a/wp-content/themes/boxcard/style.css
+++ b/wp-content/themes/boxcard/style.css
@@ -116,51 +116,51 @@ body { font-family: "Titillium", Arial, sans-serif; }
 
 @font-face {
 	font-family: 'Titillium';
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.eot');
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.svg#titillium-light-webfont') format('svg'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.eot#iefix') format('embedded-opentype'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.woff') format('woff'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.ttf') format('truetype');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.eot');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.svg#titillium-light-webfont') format('svg'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.eot#iefix') format('embedded-opentype'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.woff') format('woff'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-light-webfont.ttf') format('truetype');
 	font-weight: 300;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Titillium';
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.eot');
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.svg#titillium-lightitalic-webfont') format('svg'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.eot#iefix') format('embedded-opentype'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.woff') format('woff'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.ttf') format('truetype');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.eot');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.svg#titillium-lightitalic-webfont') format('svg'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.eot#iefix') format('embedded-opentype'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.woff') format('woff'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-lightitalic-webfont.ttf') format('truetype');
 	font-weight: 300;
 	font-style: italic;
 }
 @font-face {
 	font-family: 'Titillium';
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.eot');
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.svg#titillium-regular-webfont') format('svg'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.eot#iefix') format('embedded-opentype'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.woff') format('woff'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.ttf') format('truetype');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.eot');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.svg#titillium-regular-webfont') format('svg'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.eot#iefix') format('embedded-opentype'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.woff') format('woff'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regular-webfont.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Titillium';
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.eot');
-	src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.svg#titillium-regular-webfont') format('svg'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.eot#iefix') format('embedded-opentype'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.woff') format('woff'),
-		 url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.ttf') format('truetype');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.eot');
+	src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.svg#titillium-regular-webfont') format('svg'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.eot#iefix') format('embedded-opentype'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.woff') format('woff'),
+		 url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-regularitalic-webfont.ttf') format('truetype');
 	font-weight: 400;
 	font-style: italic;
 }
 @font-face {
     font-family: 'Titillium';
-    src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.eot');
-    src: url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.svg#titillium-semibold-webfont') format('svg'),
-         url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.eot#iefix') format('embedded-opentype'),
-         url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.woff') format('woff'),
-         url('http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.ttf') format('truetype');
+    src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.eot');
+    src: url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.svg#titillium-semibold-webfont') format('svg'),
+         url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.eot#iefix') format('embedded-opentype'),
+         url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.woff') format('woff'),
+         url('//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/fonts/titillium-semibold-webfont.ttf') format('truetype');
 	font-weight: 600;
 	font-style: normal;
 }
@@ -246,7 +246,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry blockquote:before { content: "\f10d"; color: #ccc; font-size: 32px; font-style: normal; font-family: "Font Awesome 5 Free"; font-weight: 900; text-align: center; position: absolute; left: 0; top: 0; }
 .entry blockquote.twitter-tweet:before { content: "\f099"; }
 .entry code, .entry pre { font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace; font-size: 11px; }
-.entry pre { background: url(http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/img/pre.png) repeat top; padding: 18px 20px; margin: 30px 0; border: 1px solid #ddd; line-height: 19px; white-space: pre-wrap; word-wrap: break-word; overflow-x: auto; overflow-y: hidden; }
+.entry pre { background: url(//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/img/pre.png) repeat top; padding: 18px 20px; margin: 30px 0; border: 1px solid #ddd; line-height: 19px; white-space: pre-wrap; word-wrap: break-word; overflow-x: auto; overflow-y: hidden; }
 .entry code { background: #ddd; padding: 0 3px; }
 .entry ins { background: #fff486; }
 .entry sub,
@@ -982,7 +982,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .blog-card { background: #fff; box-shadow: 0 10px 40px rgba(0,0,0,0.05), 0 3px 3px rgba(0,0,0,0.05); padding: 20px; max-width: 1200px; margin: 0 auto; margin-bottom: 60px; position: relative; }
 .blog-card-inner { height: 500px; background-color: #666; background-position: center; background-size: cover; position: relative; z-index: 2; overflow: hidden; position: relative; }
 .single .blog-card-inner { height: auto; }
-.blog-card-inner:before { opacity: 0.7; background: url(http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/img/image-gradient.png) repeat-x; background-size: 100% 100%; content: ""; position: absolute; display: block; height: 100%; width: 100%; bottom: 0; display: block; transition: all .4s ease; }
+.blog-card-inner:before { opacity: 0.7; background: url(//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/img/image-gradient.png) repeat-x; background-size: 100% 100%; content: ""; position: absolute; display: block; height: 100%; width: 100%; bottom: 0; display: block; transition: all .4s ease; }
 .blog-card-inner .thumb-icon { top: 30px; right: 30px; left: auto; bottom: auto; }
 .blog-card-inner-inner { position: absolute; bottom: 0; left: 0; right: 0; }
 .blog-card-bottom { background: #111; }
@@ -1552,7 +1552,7 @@ li #reply-title { font-size: 0; margin: 0!important; padding: 0; height: 0; bord
 /* ------------------------------------------------------------------------- *
  *  Slick Carousel Theme
 /* ------------------------------------------------------------------------- */
-.slick-loading .slick-list { background: #fff url(http://joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/img/ajax-loader.gif) center center no-repeat;  }
+.slick-loading .slick-list { background: #fff url(//joehill27.github.io/2D-Tactical-Web/wp-content/themes/boxcard/img/ajax-loader.gif) center center no-repeat;  }
 .slick-prev,.slick-next { font-size: 0; line-height: 0; position: absolute; top: 50%; display: block; width: 20px; height: 20px; padding: 0; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); cursor: pointer; color: transparent; border: none; outline: none; background: transparent;  }
 .slick-prev:hover,.slick-prev:focus,.slick-next:hover,.slick-next:focus { color: transparent; outline: none; background: transparent;  }
 .slick-prev:hover:before,.slick-prev:focus:before,.slick-next:hover:before,.slick-next:focus:before { opacity: 1;  }
