--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,65 @@
-.App {
-  text-align: center;
-}
-
 .NavLogo {
   height: 75px;
   width: 75px;
 }
 
 .Header {
-  color: black;
-  flex-grow: 0.75;
+  font-weight: bold;
 }
 
-.About {
+.PageContent {
+  text-align: center;
   color: black;
+  position: absolute;
   width: 100%;
+  height: 92.3vh;
+  background-image: url(https://i.imgur.com/7llCG2i.png);
+}
+
+.Home {
+  text-align: center;
+  color: black;
+  position: absolute;
+  width: 100%;
+  background-image: url(https://i.imgur.com/7llCG2i.png);
+  background-repeat: repeat;
+}
+
+.Assets {
+  text-align: center;
+  color: black;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(https://i.imgur.com/7llCG2i.png);
+  background-repeat: repeat;
 }
 
 .Post {
   margin: 5%;
 }
 
-.PostPara {
+.Content {
   text-align: center;
   width: 100%;
+  position: relative;
+  font-weight: bold;
 }
 
-.Img {
-  max-width: 600px;
-  min-width: 400px;
-  min-height: 300px;
-  max-height: 500px;
+.Media {
+  max-width: 100%; 
+  display:block; 
+  height: auto;
+  position: relative;
+  padding-left: 5px;
+}
+
+/* Change height to 3rem for mobile */
+
+.Asset-Imgs {
+  flex-grow: inherit;
+  display: inline-block;
+  height: 10rem;
+  width: auto;
+
 }
