--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@
 .Content {
   text-align: center;
   width: 100%;
-  position: relative;
   font-weight: bold;
+  float: left;
 }
 
 .Media {
@@ -71,4 +71,8 @@
   padding-bottom: 5%;
   padding-left: 10%;
   padding-right: 10%;
+}
+
+.Clear {
+  clear: both;
 }
