Added presentation button links and gameplay videos.

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,10 @@
 .Clear {
   clear: both;
 }
+
+.Container {
+  display:flex;
+  flex-flow: row wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
